@startuml AppointmentApplicationClasses

!include https://raw.githubusercontent.com/plantuml-stdlib/C4-PlantUML/master/C4_Deployment.puml

interface IAppointmentService <<interface>> #aliceblue;line:blue;text:blue {
  + opSchedule(appointment): Appointment
  + opReSchedule(appointment): boolean
  + opFindAppointment(id): Appointment
  + opCheckScheduleConflict(medId, dateTime): boolean
  + opListAll(): List<Appointment>
}

class AppointmentService <<service>> #PaleGreen;line:Black;text:Black implements IAppointmentService {
  - appointmentRepository: IAppointmentRepository
  - SDF: SimpleDateFormat
  + opSchedule(appointment): Appointment
  + opReSchedule(appointment): boolean
  + opFindAppointment(id): Appointment
  + opCheckScheduleConflict(medId, dateTime): boolean
  + opListAll(): List<Appointment>
  + resolveAttentionType(especialidad): AttentionType
}

' from domain layer
class Appointment<Domain Layer> <<entity>> #LightYellow;line:Black;line.dotted;text:gray {
  - id: long
  - citizenshipCardPatient: long
  - phoneNumber: String
  - medicalStaffId: long
  - dateAndTime: Date
  - attentionType: AttentionType
  - status: AppointmentStatus
  - reason: String
}

' from domain layer
enum AttentionType<Domain Layer> <<enumeration>> #LightBlue;line:Black;line.dotted;text:gray {
  GENERAL
  SPECIALIZED
}

' from infrastructure layer
interface IAppointmentRepository<Infrastructure Layer> <<interface>> #aliceblue;line:blue;line.dotted;text:gray {}

IAppointmentService ..> Appointment
AppointmentService ..> Appointment
AppointmentService -> IAppointmentRepository
AppointmentService ..> AttentionType
IAppointmentService ..> AttentionType

@enduml
